force-app/main/default/objects/FAACheckLog__c/FAACheckLog__c.object-meta.xml
<CustomObject>
    <description>Record to provide and overview about the Fraud and Approval checks which have been perfomed</description>
    <label>FAACheckLog</label>
    <nameField>
        <label>FAACheckLog__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAACheckLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>