force-app/main/default/objects/FAACheckLog__c/fields/FaaEntry__c.field-meta.xml
<CustomField>
    <fullName>FaaEntry__c</fullName>
    <displayFormat>FAA-{0000000}</displayFormat>
    <label>FaaEntry</label>
    <type>AutoNumber</type>
</CustomField>