force-app/main/default/objects/FAACheckLog__c/fields/FraudProvider__c.field-meta.xml
<CustomField>
    <fullName>FraudProvider__c</fullName>
    <description>Indicates the name of the Fraud checks which is logged</description>
    <label>FraudProvider</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>