force-app/main/default/objects/FAACheckLog__c/fields/OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>OrderSummaryId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Summary Id</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>FAACheckLogs</relationshipLabel>
    <relationshipName>FAACheckLogs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>