force-app/main/default/objects/FAACheckLog__c/fields/PendingSince__c.field-meta.xml
<CustomField>
    <fullName>PendingSince__c</fullName>
    <description>Provide information about since when this record is pending.
When the status is not pending, this field will be nulled</description>
    <label>Pending Since</label>
    <type>DateTime</type>
</CustomField>