force-app/main/default/objects/FAACheckLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates the status of the current Fraud Check</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>