force-app/main/default/objects/FAACheckLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FaaEntry__c</columns>
    <columns>FraudProvider__c</columns>
    <columns>Status__c</columns>
    <columns>OrderSummaryId__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>